# PyPLC

./: .gitignore  README.md  __init__.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: python-tests.yml
docs/examples/: plc.toml
pyPLC/: __init.py  __init__.py  file_readers.py  logs.py  manager.py  memory_areas.py  structures.py  var_types.py  vars.py
pyPLC/src/: plcComunication.py  plcManager.py  plcMemoryAreas.py  plcVar.py  plcVarTypes.py
pyPLC/test/: test_plcMemoryAreas.py  test_plcVar.py  test_plcVarTypes.py
test/: test_plcMemoryAreas.py  test_plcVar.py  test_plcVarTypes.py  test_plc_manager.py  test_plc_memory_areas.py  test_var_types.py  test_vars.py
