[build-system]
    requires = ["setuptools", "wheel"]
    build-backend = "setuptools.build_meta"

[project]
    name = "jaimead7-pyplc"
    version = "0.0.1"
    description = "Siemens S7 PLCs communication with python-snap7."
    authors = [
        {name = "Jaime Álvarez", email = "alvarez.diaz.jaime1@gmail.com"},
    ]
    maintainers = [
        {name = "Jaime Álvarez", email = "alvarez.diaz.jaime1@gmail.com"},
    ]
    readme = {file = "README.md", content-type = "text/markdown"}
    license = "MIT"
    license-files = [
        "LICENSE",
    ]
    keywords = [
        "PLC",
        "Siemens",
        "snap7",
        "S7"
    ]
    classifiers = [
        "Programming Language :: Python :: 3.10",
        "Programming Language :: Python :: 3.11",
        "Programming Language :: Python :: 3.12",
        "Programming Language :: Python :: 3.13",
    ]
    dependencies = [
        "typing-extensions",
        "pydantic",
        "python-snap7",
        "requests"
    ]
    requires-python = ">=3.10, <3.14"

    [project.optional-dependencies]
        dev = [
            "pytest",
            "build",
            "twine"
        ]

    [project.urls]
        Homepage = "https://github.com/Jaimead7/PyPLC"
        Repository = "https://github.com/Jaimead7/PyPLC"

[tool.setuptools]
    packages = ["pyPLC"]
[tool.setuptools.package-data]
    "pyPLC" = ["**/*"]
